this commit is about the work i did today like today practiced using the celery beat with django, and the production setup is still in the docker like related to all components django, redis, celery, celery-beat. today added some tasks in tasks.py like heartbeat_task, cache_timestamp_task, and clear_task. then created simple views just to run them from the browser for practice, like even though in real production these views are not required. after that, i updated the docker-compose.yml and settings.py to include the celery beat setup so that the tasks could run on schedule. also when testing, the tasks worked fine in the browser and celery worker logs, but the outputs were not logging to the database again because sqlite is not suitable for handling the cross-container writes properly on the windows. and this setup works fine on linux, but in windows for proper logging i would need a separate database like mysql or postgres, which i am yet to learn. now i am going for the scheduled university classes which are on the monday, tuesday, wednesday, and thursday, as the new semester has started. furhter though i don't take all of them, mainly will only attend the classes which are must like if any professor insists for regular attendance.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
+version: "3.9"
+
 services:
   redis:
     image: redis:7
     ports:
       - "6379:6379"
-    # adding this to persist Redis data
+    # persists redis data
     volumes:
       - redis_data:/data
 
@@ -34,6 +36,18 @@ services:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
 
-# defining the named volume
+  celery-beat:
+    build:
+      context: .
+      dockerfile: Dockerfile.celery
+    command: celery -A DjangoRedis beat -l info
+    depends_on:
+      - redis
+      - django
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+
+# setting volumes
 volumes:
   redis_data:
